--- a/ex01/elixir.html
+++ b/ex01/elixir.html
@@ -6,52 +6,74 @@
   </head>
 
   <body>
-    <h1>건강 음료</h1>
+    <header><!-- 사이트 전체 혹은 기사의 헤더 정보 -->
+      <h1>건강 음료</h1>
+    </header>
     
+    <nav><!-- nav : 메뉴 등 사이트 네이게이션 관련 시멘틱 태그-->
     <!-- 메뉴 -->
-    <ul>
-      <!-- ul : 순서 없는 리스트 -->
-      <!-- ol : 순서 있는 리스트 -->
-      <li>Green</li>
-      <li>Blue</li>
-      <li>Purple</li>
-      <li>Red</li>
-    </ul>
+      <ul>
+        <!-- ul : 순서 없는 리스트 -->
+        <!-- ol : 순서 있는 리스트 -->
+        <li>Green</li>
+        <li>Blue</li>
+        <li>Purple</li>
+        <li>Red</li>
+      </ul>
+    </nav>
 
-    <h2>Green Tea Cooler</h2>
-    <!-- 상대 경로를 이용
-      . : 현재 위치
-      .. : 부모 디렉터리 -->
-    <img src="./images/green.jpg" alt="Green Tea Cooler" />
-    <p>
-      Chock full of vitamins and minerals, this elixir combines 
-      the healthful benefits of green tea with a twist of 
-      chamomile blossoms and ginger root.
-    </p>
+    <article><!-- article : 실제 컨텐츠를 표시하는 시멘틱 태그-->
+      <!-- 시맥틱 태그는 div의 일종이지만 좀 더 구체적인 의미를 가지는 공간 점유 태그 -->
+      <div>
+        <img src="./images/Penguins.jpg" alt="Seller" />
+      </div>
 
-    <h2>Raspberry Ice Concentration</h2>
-    <img src="images/lightblue.jpg" alt="Raspberry Ice Concentration" />
-    <p>
-      Combining raspberry juice with lemon grass, citrus peel 
-      and rosehips, this icy drink will make your mind feel 
-      clear and crisp.
-    </p>
+      <section>
+        <h2>Green Tea Cooler</h2>
+        <!-- 상대 경로를 이용
+          . : 현재 위치
+          .. : 부모 디렉터리 -->
+        <img src="./images/green.jpg" alt="Green Tea Cooler" />
+        <p>
+          Chock full of vitamins and minerals, this elixir combines 
+          the healthful benefits of green tea with a twist of 
+          chamomile blossoms and ginger root.
+        </p>
+      </section>
 
-    <h2>Blueberry Bliss Elixir</h2>
-    <img src="images/blue.jpg" alt="Blueberry Bliss Elixir" />
-    <p>
-      Blueberries and cherry essence mixed into a base of 
-      elderflower herb tea will put you in a relaxed state 
-      of bliss in no time.
-    </p>
+      <section>
+        <h2>Raspberry Ice Concentration</h2>
+        <img src="images/lightblue.jpg" alt="Raspberry Ice Concentration" />
+        <p>
+          Combining raspberry juice with lemon grass, citrus peel 
+          and rosehips, this icy drink will make your mind feel 
+          clear and crisp.
+        </p>
+      </section>
 
-    <h2>Cranberry Antioxidant Blast</h2>
-    <img src="images/red.jpg" alt="Cranberry Antioxidant Blast" />
-    <p>
-      Wake up to the flavors of cranberry and 
-      hibiscus in this vitamin C rich elixir.
-    </p>
+      <section>
+        <h2>Blueberry Bliss Elixir</h2>
+        <img src="images/blue.jpg" alt="Blueberry Bliss Elixir" />
+        <p>
+          Blueberries and cherry essence mixed into a base of 
+          elderflower herb tea will put you in a relaxed state 
+          of bliss in no time.
+        </p>
+      </section>
+      
+      <section>
+        <h2>Cranberry Antioxidant Blast</h2>
+        <img src="images/red.jpg" alt="Cranberry Antioxidant Blast" />
+        <p>
+          Wake up to the flavors of cranberry and 
+          hibiscus in this vitamin C rich elixir.
+        </p>
+      </section>
+    </article>
+    <nav>
+      <p><a href="index.html">메인으로 돌아가기</a>></p>
+    </nav>
 
-    <p><a href="index.html">메인으로 돌아가기</a>></p>
+    <footer>&copy; Bit Lounge, 2021</footer>
   </body>
 </html>
