--- a/ex01/index.html
+++ b/ex01/index.html
@@ -22,6 +22,8 @@
 
 		<h2>오시는 길</h2>
 		<P>3층에서 바로 찾을 수 있어요.</P>
+		<p><a href="form.html">멤버십 가입</a></p>
+		
 		<p>
 			<!-- 외부 링크 : 서버 주소까지 모두 표시-->
 			<!-- a 태그의 중요 속성
