--- a/ex01/form.html
+++ b/ex01/form.html
@@ -7,6 +7,70 @@
 
     <body>
         <h1>멤버십 가입</h1>
+
+        <!-- 서버로 데이터 전송을 위해
+            사용자 입력을 받는 입력 태그 -->
+
+        <!-- form 태그 속성
+            method : 서버로 데이터 전송을 위한 전송 방식(POST, GET(default))
+            action : 폼 데이터를 처리할 서버 페이지의 주소 
+        -->
+        <form method="POST" action="target.html">
+            <!-- 입력 양식 그룹화-->
+            <fieldset>
+                <!-- 입력 양식 그룹의 제목 -->
+                <legend>회원가입</legend>
+                <!-- 입력 필드 설명 -->
+                <label for="userid">아이디</label>
+                <!-- type이 생략되면 text(default) -->
+                <!-- 입력 필드의
+                    name 속성 : 서버 전송시 사용
+                    id 속성 : HTML 내에서 해당 요소를 식별하기 위해 사용
+                -->
+                <input name="userid" id="userid" /></br>
+                <label for="password">비밀번호</label>
+                <!-- type="password" : 입력값을 숨김-->
+                <input type="password" name="password" id="password" /></br>
+                <!-- 입력 필드에 값을 부여하고자 할 때 value 속성 사용-->
+                <input type="hidden" name="code" value="secret_code" />
+                <lable for="recom">추천인</lable>
+                <!-- disabled 속성이 있으면 해당 입력 상자는 사용 불가-->
+                <input type="text" name="recom" id="recom" value="홍길동" disabled />
+                <!-- disabled == disabled=true -->
+
+                <label>성별</label>
+                <!-- 같은 name을 가진 radio 중 한개만 선택 가능 -->
+                <input type="radio" name="gender" value="male" checked />남
+                <input type="radio" name="gender" value="female" checked />여
+                
+                </br>
+                <!-- 같은 name을 가진 checkbox 중 중복 선택 가능 
+                    중요 : String의 배열로 전송됨 -->
+                <label>선호 음료</label>
+                <input type="checkbox" name="favorite" value="americano" />아메리카노
+                <input type="checkbox" name="favorite" value="latte" />라떼
+                <input type="checkbox" name="favorite" value="ade" />에이드
+                <input type="checkbox" name="favorite" value="tea" />녹차/홍차
+
+                </br>
+
+                <label for="telecom">통신사</label>
+                <!-- 서버로는 선택된 option의 value가 전송 -->
+                <select name="telecom" id="telecom">
+                    <!-- 서브 태그 -->
+                    <option value="S">SKT</option>
+                    <option value="K">KT</option>
+                    <option value="L">LGT</option>
+                    <option value="E">기타</option>
+                </select>
+
+                </br>
+                <!-- 현재 폼을 서버로 전송-->
+                <input type="submit" value="멤버십 가입" />
+                <!-- 작성 중인 폼을 초기화-->
+                <input type="reset" value="다시 작성" />
+            </fieldset>
+        </form>
     </body>
 
 
