--- a/ex01/index.html
+++ b/ex01/index.html
@@ -23,14 +23,14 @@
 		<h2>오시는 길</h2>
 		<P>3층에서 바로 찾을 수 있어요.</P>
 		<p><a href="form.html">멤버십 가입</a></p>
-		
+
 		<p>
 			<!-- 외부 링크 : 서버 주소까지 모두 표시-->
 			<!-- a 태그의 중요 속성
 				href : 링크 페이지의 주소
 				target : 페이지를 표시할 창의 위치 -> _blank : 새창 
 			-->
-			<a href="http://goolge.com/search?query=Bit Lounge" tartget=_blank>Google에서 검색</a>
+			<a href="https://goolgle.com/search?query=Bit Lounge" tartget="_blank">Google에서 검색</a>
 		</p>
 	</body>
 </html>
