--- a/ex01/index.html
+++ b/ex01/index.html
@@ -3,9 +3,24 @@
 	<head>
 		<title>Bit Lounge</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		
+		<!-- Page CSS : head 태그 내에 자신의 페이지 스타일을 지정하는 방법-->
+		<!--<style>
+			h1 {
+				background-color : black;
+				color : yellow;
+			}
+		</style>-->
+		
+		<!-- External CSS-->
+		<!-- 페이지 외부에 있는 스타일 시트를 불러옴 -->
+		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 
 	<body>
+		<!-- Inline Style -->
+		<!-- 여는 태그에 스타일 속성을 이용해서 설정하는 방식-->
+		<!--<h1 style="background-color: black;color:yellow">Welcome to the Lounge</h1>-->
 		<h1>Welcome to the Lounge</h1>
 		<!-- img 태그 
 			src : 이미지의 위치
@@ -15,7 +30,7 @@
 		<img src="/ex01/images/drinks.gif" alt="음료" />
 		<p>
 			<!-- 내부 링크 : 동일 디렉터리 내의 파일은 경로를 명시하지 않아도 됨 -->
-			라운지에서 시원한 <a href="elixir.html">건강 음료</a>>, 동료들과의 
+			라운지에서 시원한 <a href="elixir.html">건강 음료</a>, 동료들과의 
 			대화로 하루 스트레스를 확 날려 버리세요. 편안한 음악도 감상하세요. 
 			무선인터넷에도 언제든지 접속 가능합니다.   
 		</p>
@@ -30,7 +45,7 @@
 				href : 링크 페이지의 주소
 				target : 페이지를 표시할 창의 위치 -> _blank : 새창 
 			-->
-			<a href="https://goolgle.com/search?query=Bit Lounge" tartget="_blank">Google에서 검색</a>
+			<a href="https://google.com/search?query=Bit Lounge" target="_blank">Google에서 검색</a>
 		</p>
 	</body>
 </html>
