--- a/ex01/elixir.html
+++ b/ex01/elixir.html
@@ -80,6 +80,8 @@
       .beverage img {
         /* 값이 1개 : 전 방향 적용 */
         padding: 10px;
+
+        display: none;
       }
 
       .beverage h2 {
@@ -104,6 +106,15 @@
         /* 비율로 둥글기 설정 */
         border-radius: 50%;
 
+        /* display 속성 : 공간 점유 방식을 변경 
+          none, block, inline, inline-block
+          none -> 공간 자체를 점유하지 않음
+          */
+        /* display: none; */
+        /* visibility 속성 : 표시 여부만 결정
+          공간은 그대로 점유 */
+        /* visibility: hidden; */
+        
       }
     </style>
   </head>
