--- a/ex01/elixir.html
+++ b/ex01/elixir.html
@@ -80,8 +80,6 @@
       .beverage img {
         /* 값이 1개 : 전 방향 적용 */
         padding: 10px;
-
-        display: none;
       }
 
       .beverage h2 {
@@ -114,7 +112,27 @@
         /* visibility 속성 : 표시 여부만 결정
           공간은 그대로 점유 */
         /* visibility: hidden; */
-        
+
+      }
+
+      .menu > li {
+        float: left;
+        width: 100px;
+        height: 25px;
+        list-style-type: none;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-right: 5px;
+      }
+
+      .beverage.green img, .beverage.purple img {
+        float: left;
+        margin-right: 10px;
+      }
+
+      .beverage.blue img, .beverage.red img {
+        float: rightt;
+        margin-left: 10px;
       }
     </style>
   </head>
@@ -129,10 +147,10 @@
       <ul class="menu">
         <!-- ul : 순서 없는 리스트 -->
         <!-- ol : 순서 있는 리스트 -->
-        <li>Green</li>
-        <li>Blue</li>
-        <li>Purple</li>
-        <li>Red</li>
+        <li><a href="#green">Green</a></li>
+        <li><a href="#blue">Blue</a></li>
+        <li><a href="#purple">Purple</a></li>
+        <li><a href="#red">Red</a></li>
       </ul>
     </nav>
 
