JS Cart Example FIN

--- a/practices/practice1.html
+++ b/practices/practice1.html
@@ -5,7 +5,44 @@
 <title>테이블</title>
 
 <style type="text/css" media="screen">
+	.tbl-ex {
+		margin: 0 auto;
+		margin-top: 10px;
 
+		border: 1px solid #333;
+		border-collapse: collapse;
+		border-left: 0;
+		border-right: 0;
+	}
+	
+	.tbl-ex tr:hover {
+		background-color: #fc6;
+		cursor: pointer;
+	}
+
+	.even {
+		background-color: #E8ECF6;
+	}
+	
+	.tbl-ex th {
+		background-color: #999;
+		font-size: 1.1em;
+		color: #fff;
+		border-top: 2px solid #333;
+		border-bottom: 2px solid #333;
+		padding: 8px;
+	}
+
+	.tbl-ex td {
+		border-bottom: 1px dotted #333;
+		padding: 8px;
+	}
+
+	body {
+		font-family: '맑은고딕', 돋움, sans-serif;
+		font-size: 0.75em;
+		color: #333;
+    }
 </style>
 </head>
 <body>
