--- a/ex02-js/js-cart.html
+++ b/ex02-js/js-cart.html
@@ -1,159 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>iPhones</title>
-    <style>
-        #product-info img.selected {
-            width: 225px;
-            height: 265px;
-            float: left;
-            border: 1px solid lightslategrey;
-            margin: 5px;
-        }
-
-        #product-list li {
-            list-style-type: none;
-            border: 1px solid lightslategrey;
-            margin: 5px;
-            float: left;
-        }
-
-        #product-list li img {
-            width: 100px;
-            height: 100px;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="product-info">
-        <img id="main-image" src="images/iphone-xs.jpeg" class="selected" title="iPhones XS">
-        <!-- inline 방식으로 스크립트 실행 -->
-        <!-- img 
-            id="main-image" 
-            src="images/iphone-xs.jpeg" 
-            class="selected" 
-            title="iPhones XS"
-            onclick="alert(this.title);" --> 
-        <h2>iPhone Xs</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
-        <h3>Products</h3>
-        <ul id="product-list">
-            <li><img class="sub-image" 
-                    src="images/iphone-xs.jpeg" 
-                    title="iPhone XS"
-                    data-color="red"></li>
-            <li><img class="sub-image" 
-                    src="images/iphone-xr.jpeg" 
-                    title="iPhone XR"
-                    data-color="green"></li>
-            <li><img class="sub-image" 
-                    src="images/iphone8.jpeg" 
-                    title="iPhone 8"
-                    data-color="blue"></li>
-            <li><img class="sub-image" 
-                    src="images/ipad-mini.jpeg" 
-                    title="iPad Mini"
-                    data-color="purple"></li>
-        </ul>
-        <input type="text" id="keyword" /><button id="btn-search">검색</button>
-    </div>
-</body>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+        <title>JS Cart</title>
+        <style>
+            #list li {
+                height: 30px;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="header">
+            <h1>Shopping List</h1>
+        </div>
+        <div id="cart-list">
+            <ul id="list">
+                <li>무</li>
+                <li>배추</li>
+                <li>쪽파</li>
+                <li>고춧가루</li>
+            </ul>
+        </div>
+        <div id="cart-input">
+            <input id="item"><button id="btn-add">추가</button>
+        </div>
+        <div id="footer">
+            &copy;Bit Academy
+        </div>
+    </body>
 <script>
-    function testAttribute() {
-        //  id가 main-image인 요소를 선택하여 속성을 확인
-        var obj = document.getElementById("main-image");
-        console.log("#main-image:", obj);
-        //  선택한 요소의 모든 속성명을 반환
-        console.log(obj.getAttributeNames());
-        //  속성 조회: title 속성
-        console.log("title 속성:", 
-            obj.getAttribute("title"));
+    //  #btn-add click 처리기
+    function addItem(event) {
+        //  추가할 내용을 input#item에서 찾아온다
+        var itemInput = document.getElementById("item");
+        var item = itemInput.value.trim();  //  좌우 공백 제거
+        console.log("추가할 아이템:", item);
 
-        //  하단의 Products 이미지들 (.sub-image)
-        //  선택하여 title 속성을 확인
-        var subs = 
-        document.getElementsByClassName("sub-image");
-        console.log(".sub-image:", subs);
-        //  HTMLCollection -> loop 필요
-        for (var i = 0; i < subs.length; i++) {
-            var sub = subs[i];
-            console.log("sub title 속성:", sub.getAttribute("title"));
-        }
+        if (item.length > 0) {
+            //  부모 요소를 선택
+            var container = document.getElementById("list");
+            //  새 노드 생성
+            var itemNode = document.createElement("li");
+            //  내부 속성과 콘텐츠 설정
+            itemNode.innerText = item;
 
-    }
-    // testAttribute();
-    //  이벤트 리스너 부착 방법 2.
-    document.getElementById("main-image")
-        .onclick = function(event) {
-            //  event -> 발생한 이벤트의 정보
-            console.log(event);
-            console.log("이벤트 명:", event.__proto__);
-            console.log("이벤트 발생 객체:", event.target);
-            //  중요: event.target으로 이벤트를 발생시킨
-            //    객체를 참조할 수 있다
-        };
-    //  input#keyword에 내용을 입력하면
-    //  변경된 내용을 #btn-search에 출력해 봅시다.
-    /*
-    document.getElementById("keyword")
-        .onkeyup = function(event) {
-            // 이벤트를 발생시킨 객체 확인
-            console.log(event.target);
-            console.log("눌러진 키:", event.keyCode);
-            var btn = document.querySelector("#btn-search");
-            btn.innerText = event.target.value + ": 검색";
-        };
-    */
+            //  노드 내부에 삭제 버튼
+            var toolbar = document.createElement("div");
+            toolbar.style.display = "inline";
+            var delBtn = document.createElement("button");
+            delBtn.innerText = "삭제";
+            delBtn.style.float = "right";
 
-    //  리스너 부착 방법 3. addEventListener
-    //  -> 가장 추천
-    window.addEventListener("load", function(event) {
-        //  DOM 구성이 완료되지 않은 상태에서
-        //  요소 선택하고자 하면 오작동
-        //  load 이벤트를 이용 DOM이 완전 구성이
-        //  끝난 상태에서 페이지를 초기화 해야 한다
-        document.getElementById("keyword")
-            .addEventListener("keyup", function(event) {
+            toolbar.appendChild(delBtn);
+            itemNode.appendChild(toolbar);
+
+            //  삭제 버튼에 이벤트 리스너를 부착
+            delBtn.addEventListener("click", function(event) {
                 console.log(event.target);
-                console.log("눌러진 키:", event.keyCode);
-                var btn = document.querySelector("#btn-search");
-                btn.innerText = event.target.value + ": 검색";
+                //  삭제할 요소
+                var removeItem = event.target.parentNode.parentNode;
+                //  삭제할 요소의 부모
+                var parent = removeItem.parentNode;
+
+                //  부모로부터 분리
+                parent.removeChild(removeItem);
             });
-
-        var products = document.getElementsByClassName("sub-image");
-        // console.log(products);  //  HTMLCollection -> loop
-        for (var i = 0; i < products.length; i++) {
-            //  개발 상품
-            var product = products[i];
-            // console.log(product);
-            product.addEventListener("click", function(event) {
-                //  개발 상품의 src -> img#main-image의 src 속성으로
-                //      title -> img#main-image의 title 속성으로
-                var mainImage = document.getElementById("main-image");
-                //  이벤트를 발생시킨 객체 확인
-                var obj = event.target; //  .sub-image
-                mainImage.setAttribute("src", obj.getAttribute("src"));
-                mainImage.setAttribute("title", obj.getAttribute("title"));
-
-                var title = document.querySelector("#product-info h2");
-                title.innerText = obj.getAttribute("title");
+            // 앞에 삽입하고자 할 때
+            // 1. 자식이 없을 때 append
+            /*if(container.hasChildNodes() && container.children.length > 0) {
+                // 삽입 가능
+                // 부모 확인 -> 새 노드 생성 -> 삽입할 위치
+                document.insertBefore(itemNode, container.children[0]);
+            } else {
+                //  itemNode를 부모에 추가
+                container.appendChild(itemNode);
+            }
+             //  input#item 값을 초기화
+                itemInput.value = "";
+                itemInput.focus();*/
                 
-                //  요소의 스타일에 접근 -> style 속성 이용
-                //  주의사항
-                //  CSS style의 명명 방식 kebab-case : 예) background-color
-                //  JS로 style을 부여할 때는 camelCase : 예) backgroundColor
-                title.style.color = obj.getAttribute("data-color");
-            });
+            //  itemNode를 부모에 추가
+            container.appendChild(itemNode);
+            //  input#item 값을 초기화
+            itemInput.value = "";
+            itemInput.focus();
         }
-    });    
+    }
+
+    //  초기화: load 이벤트 처리
+    window.addEventListener("load", function(event) {
+        //  시작시 list 모두 비우기
+        var cartItem = document.querySelectorAll("#list > li");
+        for (var i = 0; i < cartItem.length; i++) {
+            //  부모로부터 분리
+            cartItem[i].parentNode.removeChild(cartItem[i]);
+        }
+        //  추가 버튼 button#btn-add 에 이벤트 부착
+        document.getElementById("btn-add")
+            .addEventListener("click", addItem);
+    });
 </script>
 </html>
