Web Site Development Helper

--- a/ex01/index.html
+++ b/ex01/index.html
@@ -2,7 +2,12 @@
 <html lang="ko">
 	<head>
 		<title>Bit Lounge</title>
+		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+		<!-- 폰트 변경 링크 -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 		
 		<!-- Page CSS : head 태그 내에 자신의 페이지 스타일을 지정하는 방법-->
 		<!--<style>
@@ -15,6 +20,14 @@
 		<!-- External CSS-->
 		<!-- 페이지 외부에 있는 스타일 시트를 불러옴 -->
 		<link rel="stylesheet" href="./styles/style.css" />
+		
+		<!-- 폰트 변경 -->
+		<style>
+			body {
+				font-family: 'Nanum Pen Script', cursive;
+				font-size: 20px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -47,5 +60,33 @@
 			-->
 			<a href="https://google.com/search?query=Bit Lounge" target="_blank">Google에서 검색</a>
 		</p>
+
+		<!-- Lorem Ipsum -->
+		<!-- 레이아웃 및 시각적요소 확인을 위한 가상의 컨텐츠 -->
+		<h3>Lorem Ipsum</h3>
+		<!-- www.lipsum.com -->
+		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam porttitor ex ipsum, at pretium lectus porta eu. Sed et turpis vel elit pellentesque posuere eget sit amet ex. Aenean sit amet nibh ut quam commodo laoreet. Duis a dictum ante. Phasellus eleifend aliquet elit nec vestibulum. Proin quis facilisis odio, nec tempus risus. Maecenas congue auctor urna vel accumsan. Ut suscipit est vel est hendrerit, sed placerat neque facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
+			Mauris sit amet sem dui. Ut non ornare lacus. Nullam bibendum bibendum libero, in varius velit ullamcorper at. Praesent placerat hendrerit enim a viverra. Nunc non nisl tortor. Vivamus commodo sit amet massa sed accumsan. Sed ut gravida felis, ut rutrum ex. Nam libero metus, laoreet in varius eu, blandit in orci. Vestibulum elit elit, ultrices feugiat volutpat eu, vehicula sit amet felis. Morbi a bibendum nunc. Duis rutrum eget nulla id luctus. Donec tortor lectus, consequat et dui ut, convallis aliquet tortor. Donec rhoncus nisl mattis est tempor posuere id sed tortor.
+			
+			Sed mollis, magna vel accumsan lacinia, ligula elit tempor nibh, ac auctor nulla odio vel dui. Curabitur malesuada, velit ac ultrices aliquam, metus massa posuere erat, ut rhoncus massa nulla non sapien. Sed vehicula mauris ante, vitae varius velit consequat ac. Morbi imperdiet nisl ut blandit venenatis. Donec molestie velit efficitur, eleifend mi a, ultrices elit. In convallis nibh et nibh interdum placerat. Nullam nec lectus at odio pretium elementum sed sit amet eros. In eget nulla a ante suscipit sodales at nec lorem. Nullam id nulla et lectus tristique faucibus nec eget magna. In sit amet suscipit nulla. Ut et lectus arcu.
+			
+			Nam nulla tortor, vulputate dapibus odio et, dictum sollicitudin nulla. Duis blandit est at ex imperdiet, in mollis eros aliquet. Etiam sit amet tincidunt tortor, eget efficitur quam. Vestibulum porttitor viverra semper. Praesent ac leo massa. Sed molestie quam sed lacus lacinia rhoncus. Nullam ornare elit nec tortor commodo, vel sollicitudin justo sagittis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi vitae odio id purus placerat ornare. Morbi nec cursus odio. Phasellus euismod nunc sit amet iaculis scelerisque. In nec nulla enim. Nam tristique egestas dui quis sagittis.
+			
+			Praesent malesuada volutpat bibendum. Ut ultricies magna eget nunc venenatis maximus. Nunc ut neque non ante pharetra sagittis. Cras scelerisque consequat semper. Vestibulum nulla sapien, mattis in tempor sit amet, lacinia sed ipsum. Sed dignissim tortor metus, volutpat tincidunt lorem scelerisque a. Ut luctus nunc sit amet hendrerit facilisis. Mauris ac enim nec est egestas placerat quis id sem. Ut pulvinar, quam a faucibus consectetur, dolor leo tempus nulla, ac sodales quam nulla id mi. Duis condimentum lobortis blandit. Integer vitae dolor eu leo varius mollis a id sapien. In consectetur mi nibh, quis hendrerit neque pulvinar a.
+		</p>
+
+		<h3>한국어 Lorem</h3>
+		<!-- http://guny.kr/stuff/klorem -->
+		<p>누구든지 체포 또는 구속을 당한 때에는 적부의 심사를 법원에 청구할 권리를 가진다. 대통령은 취임에 즈음하여 다음의 선서를 한다. 계엄을 선포한 때에는 대통령은 지체없이 국회에 통고하여야 한다.</p>
+
+		<p>국민경제자문회의의 조직·직무범위 기타 필요한 사항은 법률로 정한다. 대통령은 헌법과 법률이 정하는 바에 의하여 국군을 통수한다. 모든 국민은 주거의 자유를 침해받지 아니한다. 주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다.</p>
+
+		<p>군인은 현역을 면한 후가 아니면 국무위원으로 임명될 수 없다. 국무위원은 국정에 관하여 대통령을 보좌하며, 국무회의의 구성원으로서 국정을 심의한다.</p>
+
+
+
+		<h3>IMG Place Holder</h3>
+		<img src="http://placeimg.com/640/480/any" alt="사람" />
 	</body>
 </html>
