--- a/vue-example/vue-cart.html
+++ b/vue-example/vue-cart.html
@@ -55,10 +55,15 @@
     <script>
         // 전역 컴포넌트
         Vue.component("cart-header", {
-            template: `<h1>{{ title }}</h1>`,
+            template: `<h1>{{ upperTitle }}</h1>`,
             data: function() {
                 return {
                     title: "Vue Cart"
+                }
+            },
+            computed: { // 모델이 변경되면 미리 연산을 수행 -> 캐시해 둠(미리 저장해 둠)
+                upperTitle: function() {
+                    return this.title.toUpperCae();
                 }
             }
         });
