Computed and Watch

--- a/vue-example/vue-cart.html
+++ b/vue-example/vue-cart.html
@@ -117,11 +117,24 @@
         var cartInput = {
             template: `
             <div>
+                <p>{{ message }}</p>
                 <input v-model="newItem"><button v-on:click="addItem">추가</button>
             </div>`,
             data: function() {
                 return {
-                    newItem: "",    // 새로 살 물건 이름
+                    message: "상품을 입력하세요.",
+                    newItem: ""    // 새로 살 물건 이름
+                }
+            },
+            watch: {
+                // 모델의 변경을 적극적으로 감시
+                newItem: function(item) {
+                    console.log("item:", item);
+                    if(item.trim().length > 0) {
+                        this.message = "삼품을 등록할 수 있습니다.";
+                    } else {
+                        this.message = "상품을 입력하세요.";
+                    }
                 }
             },
             methods: {
